# py-msgbus

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: python-CI.yml
consumer/: index.html
depends/: index.html
docs/: consumer.md  depends.md  index.md  producer.md  publisher.md  service.md  subscriber.md
producer/: index.html
publisher/: index.html
service/: index.html
subscriber/: index.html
tests/: test_consumer.py  test_depends.py  test_producer.py  test_publisher.py  test_service.py  test_subscriber.py
tests/asyncio/: test_consumer.py  test_depends.py  test_depends_to_sync.py  test_producer.py  test_publisher.py  test_service.py  test_subscriber.py
